--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,13 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "extends": ["ultracite"],
+  "linter": {
+    "rules": {
+      "nursery": {
+        "useSortedClasses": "off"
+      }
+    }
+  },
   "javascript": {
     "formatter": {
       "semicolons": "asNeeded"
